--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,13 +1,13 @@
 flutter_native_splash:
   color: "#ffffff"
-  image: assets/images/logo.png
+  image: assets/images/splash_logo.png
   color_dark: "#121212"
-  image_dark: assets/images/logo.png
+  image_dark: assets/images/splash_logo.png
 
   android_12:
-    image: assets/images/logo.png
+    image: assets/images/splash_logo.png
     icon_background_color: "#ffffff"
-    image_dark: assets/images/logo.png
+    image_dark: assets/images/splash_logo.png
     icon_background_color_dark: "#121212"
 
   web: false
